# icalingua-python-bot

./: .gitignore  Cargo.toml  config-temp.toml  connect.py  data_struct.py  main.py  news.md  readme.md  requirement.txt  requirements.txt  router.py  safe_eval.py  yw.py
.github/workflows/: builds.yml  publish.yml
bot/: types.py
ica-py/: main.py  requirements.txt  router.py
ica-rs/: .gitignore  Cargo.toml  build.rs  ica_typing.py  rustfmt.toml
ica-rs/plugins/: base.py  bmcl.py  namerena.py  save_eval.py  save_eval.pyi  test.py
ica-rs/plugins/md5/: .gitignore  md5-api.js  md5-api.mts  md5-api.ts  md5.js  package-lock.json  runs.ts  runs.tsm  tsconfig.json
ica-rs/plugins/md5/assets/: gAd.md  zh.json
ica-rs/plugins/name_utils/: __init__.py
ica-rs/src/: client.rs  config.rs  error.rs  events.rs  ica.rs  main.rs  matrix.rs  py.rs  status.rs  tailchat.rs
ica-rs/src/data_struct/: all_rooms.rs  files.rs  ica.rs  messages.rs  mod.rs  new_message.rs  online_data.rs  tailchat.rs
ica-rs/src/data_struct/ica/: all_rooms.rs  messages.rs  online_data.rs
ica-rs/src/data_struct/ica/messages/: msg_trait.rs
ica-rs/src/data_struct/messages/: msg_trait.rs
ica-rs/src/data_struct/tailchat/: api.rs  messages.rs  status.rs
ica-rs/src/ica/: client.rs  events.rs
ica-rs/src/ica/data_struct/: all_rooms.rs  messages.rs  online_data.rs
ica-rs/src/ica/data_struct/messages/: msg_trait.rs
ica-rs/src/matrix/: events.rs
ica-rs/src/py/: call.rs  class.rs  config.rs  mod.rs
ica-rs/src/py/class/: ica.rs  tailchat.rs
ica-rs/src/tailchat/: client.rs  events.rs
plugins/: bmcl.py  safe_eval.py
